# football_simulator

./: CMakeLists.txt  Communication.cpp  Communication.h  Lineup.cpp  Lineup.h  Makefile  MatchReport.cpp  MatchReport.h  MoveOption.cpp  MoveOption.h  PenaltyAction.h  Player.cpp  Player.h  Position.cpp  Position.h  README.md  Team.cpp  Team.h  Util.cpp  Util.h  cmake_install.cmake  console_run_match.js  game.cpp  game.h  main.cpp  server.js
.github/workflows/: build-linux.yml
lib/: easylogginpp++.h
